overwrite old settings because they were harmfull because of the trigger delay value

--- a/code/settings.cfg
+++ b/code/settings.cfg
@@ -2,7 +2,7 @@ numberofblocks 0
 pmt 6
 waveType Square
 dist 
-samplefreq 1000000000
+samplefreq 1000000000.0
 voltagerange.A 0.05
 voltagerange.C 0.2
 voltagerange.B 0.2
@@ -21,7 +21,7 @@ triggerenabled True
 _directory ./data/
 nosamples 100
 water De-Ionized
-triggerdelay 20
+triggerdelay 0
 xticks 5
 doCalcFFT False
 triggertimeout 10000
